Add username and retrieve all by username support.
