# swagger/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "version": "1.0.0",
+        "version": "1.0.2",
         "title": "Basic Blog API",
         "description": "An application server that returns text through REST using Express JS."
     },
@@ -39,7 +39,7 @@
                     "200": {
                         "description": "entry response",
                         "schema": {
-                            "$ref": "#/definitions/newEntry"
+                            "$ref": "#/definitions/entryResponse"
                         }
                     },
                     "400": {
@@ -62,11 +62,45 @@
         "newEntry": {
             "type": "object",
             "required": [
+                "username",
                 "text"
             ],
             "properties": {
+                "username": {
+                    "type": "string",
+                    "description": "The username that owns the text."
+                },
                 "text": {
-                    "type": "string"
+                    "type": "string",
+                    "description": "The text to store."
+                },
+                "displayAll": {
+                    "type": "boolean",
+                    "description": "When included, returns all elements from oldest to newest."
+                }
+            }
+        },
+        "entryResponse": {
+            "type": "array",
+            "items": {
+                "$ref": "#/definitions/textEntry"
+            }
+        },
+        "textEntry": {
+            "type": "object",
+            "required": [
+                "modified",
+                "text"
+            ],
+            "properties": {
+                "modified": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "The timestamp of when the text was created."
+                },
+                "text": {
+                    "type": "string",
+                    "description": "The text that was stored."
                 }
             }
         },
